# galatea

./: Cargo.toml  README.md  enable-ssh.sh
.github/workflows/: update-release.yml
src/: debugger.rs  editor.rs  embedder.rs  hoarder.rs  indexer.rs  lib.rs  logging.rs  main.rs  processing.rs  resolver.rs  utils.rs  wanderer.rs  watcher.rs
src/api/: mod.rs  models.rs
src/api/routes/: code_intel.rs  codex_api.rs  editor_api.rs  logs_api.rs  lsp_api.rs  mod.rs  project.rs
src/codebase_indexing/: embedding.rs  mod.rs  pipeline.rs  postprocessor.rs  vector_db.rs
src/codebase_indexing/parser/: entities.rs  helpers.rs  mod.rs  rust_entity_parser.rs  ts_entity_parser.rs  tsx_display_parser.rs
src/dev_operation/: editor.rs  file_editor.rs  mod.rs
src/dev_runtime/: log.rs  lsp_client.rs  mcp_server.rs  mod.rs  nextjs.rs  nextjs_dev_server.rs  types.rs  util.rs
src/dev_setup/: codex.rs  codex_rules.rs  config_files.rs  env.rs  mcp_converter.rs  mod.rs  nextjs.rs  nextjs_project.rs
src/file_system/: mod.rs  paths.rs  search.rs
src/parser_mod/: helpers.rs  mod.rs  rust_entity_parser.rs  structs.rs  ts_entity_parser.rs  tsx_display_parser.rs
src/terminal/: git.rs  mod.rs  npm.rs  nvm.rs  pnpm.rs  port.rs
