[package]
edition = "2021"
name = "galatea"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.28.1"
async-trait = "0.1.88"
backoff = {version = "0.4", features = ["tokio"]}
chrono = "0.4"
clap = {version = "4.5.37", features = ["derive"]}
console_error_panic_hook = "0.1.7"
dashmap = "6.1.0"
dunce = "1.0.5"
fluent-uri = "0.3.2"
futures = "0.3"
http = "0.2"
jsonrpc-lite = "0.6.0"
leptos = { version = "0.8.2", features = ["csr"] }
lsp-types = "0.97.0"
once_cell = "1.21.3"
path-absolutize = "3.1.1"
poem = { version = "3.1.10", features = ["static-files"] }
port-killer = "0.1.0"
qdrant-client = "1.9.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
swiftide = {version = "0.25.1", features = ["openai", "qdrant", "redis", "tree-sitter"]}
tempfile = "3.10.1"
tokio = {version = "1.44.2", features = ["full"]}
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "registry", "env-filter"] }
tree-sitter = "0.25.3"
tree-sitter-rust = "0.21.0"
tree-sitter-typescript = "0.23.2"
url = "2.5.4"
uuid = {version = "1.6", features = ["v4"]}
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["Document", "Element", "HtmlElement", "Node", "Window", "Text"] }

[dev-dependencies]
tempfile = "3.10.1"

# [target.x86_64-unknown-linux-gnu]
# linker = "x86_64-unknown-linux-gnu-gcc"
